src/Source/Parser.y.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.15 from src/Source/Parser.y
-----------------------------------------------------------------------------


rule 256 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> tops                               (0)
	tops ->                                            (1)
	tops -> top tops                                   (2)
	top -> 'pragma' expApps ';'                        (3)
	top -> 'module' module ';'                         (4)
	top -> 'import' 'extern' externSig                 (5)
	top -> 'import' 'extern' '{' externSigs '}'        (6)
	top -> 'import' module ';'                         (7)
	top -> 'import' '{' module_CsZ '}'                 (8)
	top -> 'foreign' foreign                           (9)
	top -> infixMode INT symbolList ';'                (10)
	top -> dataDef ';'                                 (11)
	top -> 'effect' '!' CON '::' kind ';'              (12)
	top -> 'region' '%' sVar ';'                       (13)
	top -> 'class' CON '::' kind ';'                   (14)
	top -> 'class' CON VAR classCstrs 'where' '{' typeSig_Ss '}'   (15)
	top -> 'instance' CON typeZ_Ssp instCstrs 'where' '{' binds '}'   (16)
	top -> 'project' typeA 'where' '{' stmtSigBinds '}'   (17)
	top -> stmtTypeSig                                 (18)
	top -> expApps '=' exp ';'                         (19)
	foreign -> 'import' foreignExtern                  (20)
	foreignExtern -> 'extern' mString sVar '::' type ';'   (21)
	foreignExtern -> 'extern' mString sVar '::' type ':$' typeN ';'   (22)
	mString ->                                         (23)
	mString -> STRING                                  (24)
	module_CsZ ->                                      (25)
	module_CsZ -> module                               (26)
	module_CsZ -> module ';' module_CsZ                (27)
	module -> module_VsD                               (28)
	module_VsD -> CON                                  (29)
	module_VsD -> CON '.' module_VsD                   (30)
	infixMode -> 'infixl'                              (31)
	infixMode -> 'infixr'                              (32)
	infixMode -> 'infix'                               (33)
	symbolList -> symbol                               (34)
	symbolList -> symbol ',' symbolList                (35)
	externSig -> sVar '::' type ':$' typeN ';'         (36)
	externSigs -> externSig                            (37)
	externSigs -> externSig externSigs                 (38)
	typeSig -> var_Csp '::' type ';'                   (39)
	typeSig_Ss -> typeSig                              (40)
	typeSig_Ss -> typeSig typeSig_Ss                   (41)
	classCstrs ->                                      (42)
	classCstrs -> ':-' classCstrs2                     (43)
	classCstrs2 -> classCstr                           (44)
	classCstrs2 -> classCstr ',' classCstrs2           (45)
	classCstr -> CON vars                              (46)
	instCstrs ->                                       (47)
	instCstrs -> ':-' instCstrs2                       (48)
	instCstrs2 -> instCstr                             (49)
	instCstrs2 -> instCstr ',' instCstrs2              (50)
	instCstr -> CON typeZ_Ssp                          (51)
	exp -> 'try' expE tryCatch tryWith                 (52)
	exp -> expE                                        (53)
	tryCatch ->                                        (54)
	tryCatch -> 'catch' '{' caseAlts '}' tryCatch      (55)
	tryWith ->                                         (56)
	tryWith -> 'with' expE                             (57)
	expE -> expE2                                      (58)
	expE -> '\\' expApps '->' expE                     (59)
	expE -> '\\' '.' var expAppZs                      (60)
	expE -> 'if' exp 'then' exp 'else' expE            (61)
	expE -> 'when' expApp expE                         (62)
	expE -> 'unless' expApp expE                       (63)
	expE -> 'while' expApp expE                        (64)
	expE2 -> expInfix                                  (65)
	expE2 -> 'let' '{' stmts '}' 'in' expInfix         (66)
	expE2 -> 'throw' expInfix                          (67)
	expInfix -> expApps                                (68)
	expApps -> expApp                                  (69)
	expApps -> expApp symbol expApps                   (70)
	expApps -> expApp expApps                          (71)
	expAppZs ->                                        (72)
	expAppZs -> expApp expAppZs                        (73)
	expApp -> expZ                                     (74)
	expApp -> '`' cVar '`'                             (75)
	expApp -> const                                    (76)
	expApp -> tuple                                    (77)
	expApp -> list                                     (78)
	expZ -> expA                                       (79)
	expZ -> 'do' '{' stmts '}'                         (80)
	expZ -> 'case' exp 'of' '{' caseAlts '}'           (81)
	expZ -> 'match' '{' matchAlts '}'                  (82)
	expZ -> '\\' 'case' '{' caseAlts '}'               (83)
	expZ -> CON                                        (84)
	expA -> '(' exp ')'                                (85)
	expA -> expA '.' var                               (86)
	expA -> expA '#' var                               (87)
	expA -> expA '.' '{' var '}'                       (88)
	expA -> expA '.' '{' VAR '#' '}'                   (89)
	expA -> expA '.' '(' exp ')'                       (90)
	expA -> expA '#' '(' exp ')'                       (91)
	expA -> '^' var                                    (92)
	expA -> '_' var                                    (93)
	expA -> 'break'                                    (94)
	expA -> '()'                                       (95)
	expA -> mSVar                                      (96)
	const -> INT constU                                (97)
	const -> CHAR constU                               (98)
	const -> FLOAT constU                              (99)
	const -> STRING constU                             (100)
	constU ->                                          (101)
	constU -> '#'                                      (102)
	stmt -> exp ';'                                    (103)
	stmt -> bind                                       (104)
	stmt -> stmtTypeSig                                (105)
	stmts -> stmt                                      (106)
	stmts -> stmt stmts                                (107)
	bind -> expApps '=' exp ';'                        (108)
	binds -> bind                                      (109)
	binds -> bind binds                                (110)
	stmtSigBinds -> stmtSigBind                        (111)
	stmtSigBinds -> stmtSigBind stmtSigBinds           (112)
	stmtSigBind -> bind                                (113)
	stmtSigBind -> stmtTypeSig                         (114)
	stmtTypeSig -> sVar '::' type ';'                  (115)
	stmtTypeSig -> sVar ':*' type ';'                  (116)
	stmtTypeSig -> sVar ':::' type ';'                 (117)
	stmtTypeSig -> sVar '::*' type ';'                 (118)
	caseAlts -> caseAlt                                (119)
	caseAlts -> caseAlt caseAlts                       (120)
	caseAlt -> pat '->' exp ';'                        (121)
	caseAlt -> '_' '->' exp ';'                        (122)
	matchAlts -> matchAlt                              (123)
	matchAlts -> matchAlt matchAlts                    (124)
	matchAlt -> guards '=' exp ';'                     (125)
	matchAlt -> '\\=' exp ';'                          (126)
	guards -> guard1                                   (127)
	guards -> guard1 guard2s                           (128)
	guard1 -> '|' pat '<-' exp                         (129)
	guard1 -> '|' exp                                  (130)
	guard1 -> '|-' pat                                 (131)
	guard1 -> '|#' exp                                 (132)
	guard2s -> guard2                                  (133)
	guard2s -> guard2 guard2s                          (134)
	guard2 -> ',' pat '<-' exp                         (135)
	guard2 -> ',' exp                                  (136)
	guard2 -> ',-' pat                                 (137)
	guard2 -> ',#' exp                                 (138)
	pat -> expInfix                                    (139)
	pat -> con '{' '}'                                 (140)
	pat -> con '{' labelPat_Cs '}'                     (141)
	labelPat_Cs -> labelPat                            (142)
	labelPat_Cs -> labelPat ',' labelPat_Cs            (143)
	labelPat -> '.' var '=' var                        (144)
	labelPat -> '.' INT '=' var                        (145)
	tuple -> '(' exp ',' tupleExps ')'                 (146)
	tupleExps -> exp                                   (147)
	tupleExps -> exp ',' tupleExps                     (148)
	list -> '[' ']'                                    (149)
	list -> '[' listExps ']'                           (150)
	list -> '[' exp '..' exp ']'                       (151)
	list -> '[' exp '..' ']'                           (152)
	list -> '[' '@' exp '..' exp ']'                   (153)
	list -> '[' '@' exp '..' ']'                       (154)
	list -> '[' exp '|' lcQual_Cs ']'                  (155)
	listExps -> exp                                    (156)
	listExps -> exp ',' listExps                       (157)
	lcQual_Cs -> lcQual                                (158)
	lcQual_Cs -> lcQual ',' lcQual_Cs                  (159)
	lcQual -> exp '<-' exp                             (160)
	lcQual -> exp '<@-' exp                            (161)
	lcQual -> exp                                      (162)
	dataDef -> 'data' CON varTREC_SsE                  (163)
	dataDef -> 'data' CON varTREC_SsE '=' dataConss    (164)
	dataDef -> 'data' CON '#' varTREC_SsE              (165)
	dataDef -> 'data' CON '#' varTREC_SsE 'foreign' STRING   (166)
	dataConss -> dataCons                              (167)
	dataConss -> dataCons '|' dataConss                (168)
	dataCons -> con                                    (169)
	dataCons -> con dataType_Ss                        (170)
	dataCons -> con '{' dataField_Ss '}'               (171)
	dataField -> type ';'                              (172)
	dataField -> var '::' type ';'                     (173)
	dataField -> '.' var '::' type dataInit ';'        (174)
	dataInit ->                                        (175)
	dataInit -> '=' exp                                (176)
	dataField_Ss -> dataField                          (177)
	dataField_Ss -> dataField dataField_Ss             (178)
	dataType -> typeZ                                  (179)
	dataType_Ss -> dataType                            (180)
	dataType_Ss -> dataType dataType_Ss                (181)
	varTREC -> VAR                                     (182)
	varTREC -> '%' VAR                                 (183)
	varTREC -> '!' VAR                                 (184)
	varTREC -> '$' VAR                                 (185)
	varTREC_SsE ->                                     (186)
	varTREC_SsE -> varTREC varTREC_SsE                 (187)
	type -> typeQuant                                  (188)
	type -> 'elaborate' type                           (189)
	typeQuant -> typeF                                 (190)
	typeQuant -> 'forall' quantVars '.' typeF          (191)
	typeF -> typeN                                     (192)
	typeF -> typeN ':-' fetters                        (193)
	typeN -> typeA                                     (194)
	typeN -> typeA '->' typeN                          (195)
	typeN -> typeA '-' '(' effect ')' '>' typeN        (196)
	typeN -> typeA '-' '(' closure ')' '>' typeN       (197)
	typeN -> typeA '-' '(' effect1 closure ')' '>' typeN   (198)
	typeA -> typeZ                                     (199)
	typeA -> mCon typeArg_Ss                           (200)
	typeA -> mCon '#' typeArg_Ss                       (201)
	typeZ -> VAR                                       (202)
	typeZ -> mCon                                      (203)
	typeZ -> mCon '#'                                  (204)
	typeZ -> '()'                                      (205)
	typeZ -> '(' typeN ')'                             (206)
	typeZ -> '(' 'mutable' typeN ')'                   (207)
	typeZ -> '(' kind ')'                              (208)
	typeZ -> '[' typeN ']'                             (209)
	typeZ -> '(' typeN ',' typeN_Scp ')'               (210)
	typeZ_Ssp -> typeZ                                 (211)
	typeZ_Ssp -> typeZ typeZ_Ssp                       (212)
	typeN_Scp -> typeN                                 (213)
	typeN_Scp -> typeN ',' typeN_Scp                   (214)
	typeArg_Ss -> typeArg                              (215)
	typeArg_Ss -> typeArg typeArg_Ss                   (216)
	typeArg -> typeZ                                   (217)
	typeArg -> '%' sVar                                (218)
	typeArg -> '!' sVar                                (219)
	typeArg -> '$' sVar                                (220)
	quantVars -> quantVar                              (221)
	quantVars -> quantVar quantVars                    (222)
	quantVar -> sVar                                   (223)
	quantVar -> '(' sVar '::' kind ')'                 (224)
	quantVar -> '%' sVar                               (225)
	quantVar -> '!' sVar                               (226)
	quantVar -> '$' sVar                               (227)
	kind -> kindA                                      (228)
	kind -> kindA '->' kind                            (229)
	kindA -> '*'                                       (230)
	kindA -> '%'                                       (231)
	kindA -> '!'                                       (232)
	kindA -> '+'                                       (233)
	fetters -> fetter                                  (234)
	fetters -> fetter ',' fetters                      (235)
	fetter -> '!' VAR '=' effectSum                    (236)
	fetter -> '$' VAR '=' closureSum                   (237)
	fetter -> CON '=' effectSum '|' closureSum         (238)
	fetter -> CON '=' effectSum                        (239)
	fetter -> CON '=' closureSum                       (240)
	fetter -> mCon typeArg_Ss                          (241)
	effect -> effectVar                                (242)
	effect -> effectCtor                               (243)
	effect -> effectSum                                (244)
	effectVar -> '!' VAR                               (245)
	effectCtor -> effectCon                            (246)
	effectCtor -> effectCon typeArg_Ss                 (247)
	effectCon -> effectConPs                           (248)
	effectConPs -> CON '.' effectConPs                 (249)
	effectConPs -> '!' CON                             (250)
	effectSum -> '!' '{' effect_cs '}'                 (251)
	effect_cs -> effect                                (252)
	effect_cs -> effect ';' effect_cs                  (253)
	effect1 -> effectVar                               (254)
	effect1 -> '(' effect ')'                          (255)
	effectCtor1 -> effectCon                           (256)
	closure -> closureSum                              (257)
	closure -> closurePart                             (258)
	closureSum -> '$' '{' closurePart_Cs '}'           (259)
	closurePart -> '$' cVar                            (260)
	closurePart -> cVar '::' type                      (261)
	closurePart_Cs -> closurePart                      (262)
	closurePart_Cs -> closurePart ';' closurePart_Cs   (263)
	mSVar -> mSVar2                                    (264)
	mSVar -> mCon2 '.' mSVar2                          (265)
	mSVar2 -> var                                      (266)
	mSVar2 -> '(' symbol ')'                           (267)
	mVar -> sVar                                       (268)
	mVar -> mCon2 '.' sVar                             (269)
	mCon -> mCon2                                      (270)
	mCon2 -> CON                                       (271)
	mCon2 -> mCon2 '.' CON                             (272)
	var -> VAR                                         (273)
	var -> 'elaborate'                                 (274)
	var -> 'const'                                     (275)
	var -> 'mutable'                                   (276)
	var -> 'extern'                                    (277)
	vars ->                                            (278)
	vars -> var vars                                   (279)
	var_Csp -> mVar                                    (280)
	var_Csp -> mVar ',' var_Csp                        (281)
	con -> CON                                         (282)
	cVar -> var                                        (283)
	cVar -> con                                        (284)
	sVar -> var                                        (285)
	sVar -> con                                        (286)
	sVar -> '(' symbol ')'                             (287)
	symbol -> SYM                                      (288)
	symbol -> ':'                                      (289)
	symbol -> '*'                                      (290)
	symbol -> '-'                                      (291)
	symbol -> '!'                                      (292)
	symbol -> '@'                                      (293)
	symbol -> '<'                                      (294)
	symbol -> '>'                                      (295)
	symbol -> '/'                                      (296)
	symbol -> '+'                                      (297)
	symbol -> '$'                                      (298)
	symbol -> '%'                                      (299)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'pragma'       { TokenP { token = K.Pragma	} }
	'foreign'      { TokenP { token = K.Foreign	} }
	'import'       { TokenP { token = K.Import	} }
	'module'       { TokenP { token = K.Module	} }
	'elaborate'    { TokenP { token = K.Elaborate	} }
	'const'        { TokenP { token = K.Const	} }
	'mutable'      { TokenP { token = K.Mutable	} }
	'extern'       { TokenP { token = K.Extern	} }
	'data'         { TokenP { token = K.Data	} }
	'region'       { TokenP { token = K.Region	} }
	'effect'       { TokenP { token = K.Effect     } }
	'class'        { TokenP { token = K.Class	} }
	'instance'     { TokenP { token = K.Instance   } }
	'project'      { TokenP { token = K.Project	} }
	'infixr'       { TokenP { token = K.InfixR	} }
	'infixl'       { TokenP { token = K.InfixL	} }
	'infix'        { TokenP { token = K.Infix	} }
	'let'          { TokenP { token = K.Let	} }
	'in'           { TokenP { token = K.In		} }
	'where'        { TokenP { token = K.Where	} }
	'case'         { TokenP { token = K.Case	} }
	'of'           { TokenP { token = K.Of		} }
	'match'        { TokenP { token = K.Match	} }
	'if'           { TokenP { token = K.If		} }
	'then'         { TokenP { token = K.Then	} }
	'else'         { TokenP { token = K.Else	} }
	'throw'        { TokenP { token = K.Throw	} }
	'try'          { TokenP { token = K.Try	} }
	'catch'        { TokenP { token = K.Catch	} }
	'with'         { TokenP { token = K.With	} }
	'do'           { TokenP { token = K.Do		} }
	'while'        { TokenP { token = K.While	} }
	'when'         { TokenP { token = K.When	} }
	'unless'       { TokenP { token = K.Unless	} }
	'break'        { TokenP { token = K.Break	} }
	'forall'       { TokenP { token = K.Forall	} }
	'::'           { TokenP { token = K.HasType	   } }
	':*'           { TokenP { token = K.HasTypeQuant  } }
	':::'          { TokenP { token = K.HasTypeExact } }
	'::*'          { TokenP { token = K.HasTypeExactQuant } }
	':$'           { TokenP { token = K.HasOpType	   } }
	':-'           { TokenP { token = K.HasConstraint } }
	'->'           { TokenP { token = K.RightArrow } }
	'()'           { TokenP { token = K.Unit	} }
	'|-'           { TokenP { token = K.GuardCase } }
	',-'           { TokenP { token = K.GuardCaseC } }
	'|#'           { TokenP { token = K.GuardUnboxed } }
	',#'           { TokenP { token = K.GuardUnboxedC } }
	'\\='          { TokenP { token = K.GuardDefault } }
	'{'            { TokenP { token = K.CBra	} }
	'}'            { TokenP { token = K.CKet	} }
	'('            { TokenP { token = K.RBra	} }
	')'            { TokenP { token = K.RKet	} }
	'['            { TokenP { token = K.SBra	} }
	']'            { TokenP { token = K.SKet	} }
	'<'            { TokenP { token = K.ABra	} }
	'>'            { TokenP { token = K.AKet	} }
	'\\'           { TokenP { token = K.BSlash	} }
	'`'            { TokenP { token = K.BTick	} }
	'='            { TokenP { token = K.Equals	} }
	','            { TokenP { token = K.Comma	} }
	':'            { TokenP { token = K.Colon	} }
	';'            { TokenP { token = K.SColon	} }
	'|'            { TokenP { token = K.Bar	} }
	'.'            { TokenP { token = K.Dot	} }
	'#'            { TokenP { token = K.Hash	} }
	'*'            { TokenP { token = K.Star	} }
	'-'            { TokenP { token = K.Dash	} }
	'+'            { TokenP { token = K.Plus	} }
	'%'            { TokenP { token = K.Percent	} }
	'@'            { TokenP { token = K.At		} }
	'!'            { TokenP { token = K.Bang	} }
	'/'            { TokenP { token = K.FSlash	} }
	'$'            { TokenP { token = K.Dollar	} }
	'_'            { TokenP { token = K.Underscore	} }
	'^'            { TokenP { token = K.Hat	} }
	'..'           { TokenP { token = K.DotDot	} }
	'<-'           { TokenP { token = K.LeftArrow	} }
	'<@-'          { TokenP { token = K.LeftArrowLazy } }
	CON            { TokenP { token = K.Tycon  _	} }
	VAR            { TokenP { token = K.Var    _	} }
	SYM            { TokenP { token = K.Symbol _	} }
	INT            { TokenP { token = K.CInt    _	} }
	CHAR           { TokenP { token = K.CChar   _  } }
	FLOAT          { TokenP { token = K.CFloat  _	} }
	STRING         { TokenP { token = K.CString _	} }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	tops            rules 1, 2
	top             rules 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19
	foreign         rule  20
	foreignExtern   rules 21, 22
	mString         rules 23, 24
	module_CsZ      rules 25, 26, 27
	module          rule  28
	module_VsD      rules 29, 30
	infixMode       rules 31, 32, 33
	symbolList      rules 34, 35
	externSig       rule  36
	externSigs      rules 37, 38
	typeSig         rule  39
	typeSig_Ss      rules 40, 41
	classCstrs      rules 42, 43
	classCstrs2     rules 44, 45
	classCstr       rule  46
	instCstrs       rules 47, 48
	instCstrs2      rules 49, 50
	instCstr        rule  51
	exp             rules 52, 53
	tryCatch        rules 54, 55
	tryWith         rules 56, 57
	expE            rules 58, 59, 60, 61, 62, 63, 64
	expE2           rules 65, 66, 67
	expInfix        rule  68
	expApps         rules 69, 70, 71
	expAppZs        rules 72, 73
	expApp          rules 74, 75, 76, 77, 78
	expZ            rules 79, 80, 81, 82, 83, 84
	expA            rules 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96
	const           rules 97, 98, 99, 100
	constU          rules 101, 102
	stmt            rules 103, 104, 105
	stmts           rules 106, 107
	bind            rule  108
	binds           rules 109, 110
	stmtSigBinds    rules 111, 112
	stmtSigBind     rules 113, 114
	stmtTypeSig     rules 115, 116, 117, 118
	caseAlts        rules 119, 120
	caseAlt         rules 121, 122
	matchAlts       rules 123, 124
	matchAlt        rules 125, 126
	guards          rules 127, 128
	guard1          rules 129, 130, 131, 132
	guard2s         rules 133, 134
	guard2          rules 135, 136, 137, 138
	pat             rules 139, 140, 141
	labelPat_Cs     rules 142, 143
	labelPat        rules 144, 145
	tuple           rule  146
	tupleExps       rules 147, 148
	list            rules 149, 150, 151, 152, 153, 154, 155
	listExps        rules 156, 157
	lcQual_Cs       rules 158, 159
	lcQual          rules 160, 161, 162
	dataDef         rules 163, 164, 165, 166
	dataConss       rules 167, 168
	dataCons        rules 169, 170, 171
	dataField       rules 172, 173, 174
	dataInit        rules 175, 176
	dataField_Ss    rules 177, 178
	dataType        rule  179
	dataType_Ss     rules 180, 181
	varTREC         rules 182, 183, 184, 185
	varTREC_SsE     rules 186, 187
	type            rules 188, 189
	typeQuant       rules 190, 191
	typeF           rules 192, 193
	typeN           rules 194, 195, 196, 197, 198
	typeA           rules 199, 200, 201
	typeZ           rules 202, 203, 204, 205, 206, 207, 208, 209, 210
	typeZ_Ssp       rules 211, 212
	typeN_Scp       rules 213, 214
	typeArg_Ss      rules 215, 216
	typeArg         rules 217, 218, 219, 220
	quantVars       rules 221, 222
	quantVar        rules 223, 224, 225, 226, 227
	kind            rules 228, 229
	kindA           rules 230, 231, 232, 233
	fetters         rules 234, 235
	fetter          rules 236, 237, 238, 239, 240, 241
	effect          rules 242, 243, 244
	effectVar       rule  245
	effectCtor      rules 246, 247
	effectCon       rule  248
	effectConPs     rules 249, 250
	effectSum       rule  251
	effect_cs       rules 252, 253
	effect1         rules 254, 255
	effectCtor1     rule  256
	closure         rules 257, 258
	closureSum      rule  259
	closurePart     rules 260, 261
	closurePart_Cs  rules 262, 263
	mSVar           rules 264, 265
	mSVar2          rules 266, 267
	mVar            rules 268, 269
	mCon            rule  270
	mCon2           rules 271, 272
	var             rules 273, 274, 275, 276, 277
	vars            rules 278, 279
	var_Csp         rules 280, 281
	con             rule  282
	cVar            rules 283, 284
	sVar            rules 285, 286, 287
	symbol          rules 288, 289, 290, 291, 292, 293, 294, 295, 296, 297, 298, 299

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'pragma'       shift, and enter state 20
	'foreign'      shift, and enter state 21
	'import'       shift, and enter state 22
	'module'       shift, and enter state 23
	'elaborate'    shift, and enter state 24
	'const'        shift, and enter state 25
	'mutable'      shift, and enter state 26
	'extern'       shift, and enter state 27
	'data'         shift, and enter state 28
	'region'       shift, and enter state 29
	'effect'       shift, and enter state 30
	'class'        shift, and enter state 31
	'instance'     shift, and enter state 32
	'project'      shift, and enter state 33
	'infixr'       shift, and enter state 34
	'infixl'       shift, and enter state 35
	'infix'        shift, and enter state 36
	'case'         shift, and enter state 37
	'match'        shift, and enter state 38
	'do'           shift, and enter state 39
	'break'        shift, and enter state 40
	'()'           shift, and enter state 41
	'('            shift, and enter state 42
	'['            shift, and enter state 43
	'\\'           shift, and enter state 44
	'`'            shift, and enter state 45
	'_'            shift, and enter state 46
	'^'            shift, and enter state 47
	CON            shift, and enter state 48
	VAR            shift, and enter state 49
	INT            shift, and enter state 50
	CHAR           shift, and enter state 51
	FLOAT          shift, and enter state 52
	STRING         shift, and enter state 53
	%eof           reduce using rule 1

	tops           goto state 2
	top            goto state 3
	infixMode      goto state 4
	expApps        goto state 5
	expApp         goto state 6
	expZ           goto state 7
	expA           goto state 8
	const          goto state 9
	stmtTypeSig    goto state 10
	tuple          goto state 11
	list           goto state 12
	dataDef        goto state 13
	mSVar          goto state 14
	mSVar2         goto state 15
	mCon2          goto state 16
	var            goto state 17
	con            goto state 18
	sVar           goto state 19

State 1




State 2

	%start_parse -> tops .                              (rule 0)

	%eof           accept


State 3

	tops -> top . tops                                  (rule 2)

	'pragma'       shift, and enter state 20
	'foreign'      shift, and enter state 21
	'import'       shift, and enter state 22
	'module'       shift, and enter state 23
	'elaborate'    shift, and enter state 24
	'const'        shift, and enter state 25
	'mutable'      shift, and enter state 26
	'extern'       shift, and enter state 27
	'data'         shift, and enter state 28
	'region'       shift, and enter state 29
	'effect'       shift, and enter state 30
	'class'        shift, and enter state 31
	'instance'     shift, and enter state 32
	'project'      shift, and enter state 33
	'infixr'       shift, and enter state 34
	'infixl'       shift, and enter state 35
	'infix'        shift, and enter state 36
	'case'         shift, and enter state 37
	'match'        shift, and enter state 38
	'do'           shift, and enter state 39
	'break'        shift, and enter state 40
	'()'           shift, and enter state 41
	'('            shift, and enter state 42
	'['            shift, and enter state 43
	'\\'           shift, and enter state 44
	'`'            shift, and enter state 45
	'_'            shift, and enter state 46
	'^'            shift, and enter state 47
	CON            shift, and enter state 48
	VAR            shift, and enter state 49
	INT            shift, and enter state 50
	CHAR           shift, and enter state 51
	FLOAT          shift, and enter state 52
	STRING         shift, and enter state 53
	%eof           reduce using rule 1

	tops           goto state 137
	top            goto state 3
	infixMode      goto state 4
	expApps        goto state 5
	expApp         goto state 6
	expZ           goto state 7
	expA           goto state 8
	const          goto state 9
	stmtTypeSig    goto state 10
	tuple          goto state 11
	list           goto state 12
	dataDef        goto state 13
	mSVar          goto state 14
	mSVar2         goto state 15
	mCon2          goto state 16
	var            goto state 17
	con            goto state 18
	sVar           goto state 19

State 4

	top -> infixMode . INT symbolList ';'               (rule 10)

	INT            shift, and enter state 136


State 5

	top -> expApps . '=' exp ';'                        (rule 19)

	'='            shift, and enter state 135


State 6

	expApps -> expApp .                                 (rule 69)
	expApps -> expApp . symbol expApps                  (rule 70)
	expApps -> expApp . expApps                         (rule 71)

	'elaborate'    shift, and enter state 24
	'const'        shift, and enter state 25
	'mutable'      shift, and enter state 26
	'extern'       shift, and enter state 27
	'case'         shift, and enter state 37
	'of'           reduce using rule 69
	'match'        shift, and enter state 38
	'then'         reduce using rule 69
	'else'         reduce using rule 69
	'catch'        reduce using rule 69
	'with'         reduce using rule 69
	'do'           shift, and enter state 39
	'break'        shift, and enter state 40
	'->'           reduce using rule 69
	'()'           shift, and enter state 41
	',-'           reduce using rule 69
	',#'           reduce using rule 69
	'('            shift, and enter state 80
	')'            reduce using rule 69
	'['            shift, and enter state 43
	']'            reduce using rule 69
	'<'            shift, and enter state 87
	'>'            shift, and enter state 88
	'\\'           shift, and enter state 44
	'`'            shift, and enter state 45
	'='            reduce using rule 69
	','            reduce using rule 69
	':'            shift, and enter state 89
	';'            reduce using rule 69
	'|'            reduce using rule 69
	'*'            shift, and enter state 90
	'-'            shift, and enter state 91
	'+'            shift, and enter state 92
	'%'            shift, and enter state 93
	'@'            shift, and enter state 94
	'!'            shift, and enter state 95
	'/'            shift, and enter state 96
	'$'            shift, and enter state 97
	'_'            shift, and enter state 46
	'^'            shift, and enter state 47
	'..'           reduce using rule 69
	'<-'           reduce using rule 69
	'<@-'          reduce using rule 69
	CON            shift, and enter state 84
	VAR            shift, and enter state 49
	SYM            shift, and enter state 98
	INT            shift, and enter state 50
	CHAR           shift, and enter state 51
	FLOAT          shift, and enter state 52
	STRING         shift, and enter state 53

	expApps        goto state 133
	expApp         goto state 6
	expZ           goto state 7
	expA           goto state 8
	const          goto state 9
	tuple          goto state 11
	list           goto state 12
	mSVar          goto state 14
	mSVar2         goto state 15
	mCon2          goto state 16
	var            goto state 72
	symbol         goto state 134

State 7

	expApp -> expZ .                                    (rule 74)

	'elaborate'    reduce using rule 74
	'const'        reduce using rule 74
	'mutable'      reduce using rule 74
	'extern'       reduce using rule 74
	'let'          reduce using rule 74
	'case'         reduce using rule 74
	'of'           reduce using rule 74
	'match'        reduce using rule 74
	'if'           reduce using rule 74
	'then'         reduce using rule 74
	'else'         reduce using rule 74
	'throw'        reduce using rule 74
	'catch'        reduce using rule 74
	'with'         reduce using rule 74
	'do'           reduce using rule 74
	'while'        reduce using rule 74
	'when'         reduce using rule 74
	'unless'       reduce using rule 74
	'break'        reduce using rule 74
	'->'           reduce using rule 74
	'()'           reduce using rule 74
	',-'           reduce using rule 74
	',#'           reduce using rule 74
	'('            reduce using rule 74
	')'            reduce using rule 74
	'['            reduce using rule 74
	']'            reduce using rule 74
	'<'            reduce using rule 74
	'>'            reduce using rule 74
	'\\'           reduce using rule 74
	'`'            reduce using rule 74
	'='            reduce using rule 74
	','            reduce using rule 74
	':'            reduce using rule 74
	';'            reduce using rule 74
	'|'            reduce using rule 74
	'*'            reduce using rule 74
	'-'            reduce using rule 74
	'+'            reduce using rule 74
	'%'            reduce using rule 74
	'@'            reduce using rule 74
	'!'            reduce using rule 74
	'/'            reduce using rule 74
	'$'            reduce using rule 74
	'_'            reduce using rule 74
	'^'            reduce using rule 74
	'..'           reduce using rule 74
	'<-'           reduce using rule 74
	'<@-'          reduce using rule 74
	CON            reduce using rule 74
	VAR            reduce using rule 74
	SYM            reduce using rule 74
	INT            reduce using rule 74
	CHAR           reduce using rule 74
	FLOAT          reduce using rule 74
	STRING         reduce using rule 74


State 8

	expZ -> expA .                                      (rule 79)
	expA -> expA . '.' var                              (rule 86)
	expA -> expA . '#' var                              (rule 87)
	expA -> expA . '.' '{' var '}'                      (rule 88)
	expA -> expA . '.' '{' VAR '#' '}'                  (rule 89)
	expA -> expA . '.' '(' exp ')'                      (rule 90)
	expA -> expA . '#' '(' exp ')'                      (rule 91)

	'elaborate'    reduce using rule 79
	'const'        reduce using rule 79
	'mutable'      reduce using rule 79
	'extern'       reduce using rule 79
	'let'          reduce using rule 79
	'case'         reduce using rule 79
	'of'           reduce using rule 79
	'match'        reduce using rule 79
	'if'           reduce using rule 79
	'then'         reduce using rule 79
	'else'         reduce using rule 79
	'throw'        reduce using rule 79
	'catch'        reduce using rule 79
	'with'         reduce using rule 79
	'do'           reduce using rule 79
	'while'        reduce using rule 79
	'when'         reduce using rule 79
	'unless'       reduce using rule 79
	'break'        reduce using rule 79
	'->'           reduce using rule 79
	'()'           reduce using rule 79
	',-'           reduce using rule 79
	',#'           reduce using rule 79
	'('            reduce using rule 79
	')'            reduce using rule 79
	'['            reduce using rule 79
	']'            reduce using rule 79
	'<'            reduce using rule 79
	'>'            reduce using rule 79
	'\\'           reduce using rule 79
	'`'            reduce using rule 79
	'='            reduce using rule 79
	','            reduce using rule 79
	':'            reduce using rule 79
	';'            reduce using rule 79
	'|'            reduce using rule 79
	'.'            shift, and enter state 131
	'#'            shift, and enter state 132
	'*'            reduce using rule 79
	'-'            reduce using rule 79
	'+'            reduce using rule 79
	'%'            reduce using rule 79
	'@'            reduce using rule 79
	'!'            reduce using rule 79
	'/'            reduce using rule 79
	'$'            reduce using rule 79
	'_'            reduce using rule 79
	'^'            reduce using rule 79
	'..'           reduce using rule 79
	'<-'           reduce using rule 79
	'<@-'          reduce using rule 79
	CON            reduce using rule 79
	VAR            reduce using rule 79
	SYM            reduce using rule 79
	INT            reduce using rule 79
	CHAR           reduce using rule 79
	FLOAT          reduce using rule 79
	STRING         reduce using rule 79


State 9

	expApp -> const .                                   (rule 76)
